Fix a mobile layout issue and make links in task notes

--- a/assets/sass/layouts.scss
+++ b/assets/sass/layouts.scss
@@ -52,7 +52,6 @@ $sidebar-width: 250px;
   .layout-three-quarter {
     padding-left: 10px;
 
-    .sidebar,
     .content {
       padding-top: $space * 3;
       padding-left: $space * 4;
